fix error with create directory resources for tests (2)